; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_storvsc_drv.c_storvsc_device_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_storvsc_drv.c_storvsc_device_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_device = type { %struct.stor_mem_pools* }
%struct.stor_mem_pools = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.scsi_device*)* @storvsc_device_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @storvsc_device_destroy(%struct.scsi_device* %0) #0 {
  %2 = alloca %struct.scsi_device*, align 8
  %3 = alloca %struct.stor_mem_pools*, align 8
  store %struct.scsi_device* %0, %struct.scsi_device** %2, align 8
  %4 = load %struct.scsi_device*, %struct.scsi_device** %2, align 8
  %5 = getelementptr inbounds %struct.scsi_device, %struct.scsi_device* %4, i32 0, i32 0
  %6 = load %struct.stor_mem_pools*, %struct.stor_mem_pools** %5, align 8
  store %struct.stor_mem_pools* %6, %struct.stor_mem_pools** %3, align 8
  %7 = load %struct.stor_mem_pools*, %struct.stor_mem_pools** %3, align 8
  %8 = getelementptr inbounds %struct.stor_mem_pools, %struct.stor_mem_pools* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @mempool_destroy(i32 %9)
  %11 = load %struct.stor_mem_pools*, %struct.stor_mem_pools** %3, align 8
  %12 = getelementptr inbounds %struct.stor_mem_pools, %struct.stor_mem_pools* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @kmem_cache_destroy(i32 %13)
  %15 = load %struct.stor_mem_pools*, %struct.stor_mem_pools** %3, align 8
  %16 = call i32 @kfree(%struct.stor_mem_pools* %15)
  %17 = load %struct.scsi_device*, %struct.scsi_device** %2, align 8
  %18 = getelementptr inbounds %struct.scsi_device, %struct.scsi_device* %17, i32 0, i32 0
  store %struct.stor_mem_pools* null, %struct.stor_mem_pools** %18, align 8
  ret void
}

declare dso_local i32 @mempool_destroy(i32) #1

declare dso_local i32 @kmem_cache_destroy(i32) #1

declare dso_local i32 @kfree(%struct.stor_mem_pools*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
